--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+body {
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+}
 .flex-container {
     display: flex;
-    /* flex-direction: cloumn; */
+    flex-direction: column;
+    
 }
 
 /* this selector selects all divs inside of .flex-container */
