--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: 'SF Pro Display', sans-serif;
 }
-.flex-container {
+.container {
     display: flex;
-    flex-direction: column;
+    height: 140px;
+    padding: 16px;
+    background: plum;
+    border: 4px solid indigo;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
     
 }
 
-/* this selector selects all divs inside of .flex-container */
-.flex-container div {
-    background: peachpuff;
-    border: 4px solid brown;
-    height: 80px;
-    flex: 1 1 auto;
+.item {
+    background: skyblue;
+    border: 4px solid darkslategray;
+    height: 60px;
+    width: 60px;  
+    
 }
